# hippox-desktop

./: .gitignore  Cargo.toml  README.md  README_zh-CN.md  package-lock.json  package.json
src/: App.css  App.tsx  NotificationManager.ts  TaskManager.ts  common.tsx  config.ts  i18n.ts  icons.tsx  index.css  index.tsx  type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: common.rs  context.rs  lib.rs  main.rs  state.rs  types.rs  workspace.rs
src-tauri/src/commands/: callback.rs  chat.rs  config.rs  context.rs  files.rs  health.rs  llm.rs  mod.rs  models.rs  notification.rs  paths.rs  scheduled.rs  search.rs  session.rs  skills.rs  skills_market.rs  sys.rs  tauri_callback.rs  windows.rs
src-tauri/src/events/: mod.rs  tray.rs  window.rs
src-tauri/src/windows/: mod.rs  submenu.rs  tray.rs  tray_submenu.rs
src/api/: chat.ts  config.ts  files.ts  health.ts  llm.ts  notification.ts  paths.ts  search.ts  session.ts  skills.ts  tauri.ts  workspace.ts
src/components/: BottomBar.tsx  ChatPanel.tsx  CustomDragCursor.tsx  Dialog.tsx  FilePreview.tsx  FileUploader.tsx  GlobalDragOverlay.tsx  MenuPanel.tsx  ResizablePanels.tsx  Sidebar.tsx  TerminalPanel.tsx  Toast.tsx  Tooltip.tsx  TopBar.tsx  WelcomePage.tsx
src/components/BottomBar/: ModelSelector.tsx  NotificationCenter.tsx  index.tsx
src/components/MenuPanel/: AIModelConfig.tsx  AtomicSkillsPanel.tsx  index.tsx  (+15 more)
src/hooks/: useTranslation.ts
src/services/: Model.ts  NotificationService.ts
src/test/: TestData_3.ts
src/windows/: SubmenuWindow.tsx  SystemTrayWindow.tsx
(+12 files in other folders)
