[package]
name = "HippoX"
version = "0.1.0"
description = "Hippox is an operating system desktop application that helps you operate your computer better."
authors = ["happyboy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2.7.0"
# hippox = "0.4.6"
hippox = { path = "D:\\gitproject\\hippox" }
dirs = "6.0.0"
tokio = "1.52.3"
uuid = "1.20.0"
chrono = "0.4.44"
once_cell = "1.21.4"
async-trait = "0.1.89"
fs_extra = "1.3.0"
rfd = "0.17.2"
walkdir = "2.5.0"
nix = "0.31.3"
sysinfo = "0.36.1"
memcontext = "0.3.5"
